add_library(cpu cpu.cpp)
add_library(ram ram.cpp)
add_library(display display.cpp)
add_library(io io.cpp)
target_include_directories(cpu PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories(ram PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories(display PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_include_directories(io PUBLIC "${PROJECT_SOURCE_DIR}/include")
target_link_libraries(io -lSDL2)